# email_tools_py

./: .gitignore  README.md  pyproject.toml
email_tools_py/: __init__.py
tests/: test.py
